--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ me: <a href='https://www.linkedin.com/in/gtozer/'>linkedin.com/in/gtozer</a>
 <br />
 my post: <a href='https://www.rhsmith.umd.edu/directory/gorkem-turgut-ozer'>rhsmith.umd.edu/directory/gorkem-turgut-ozer</a>
 <br />
-my teaching: <a href='http://courses.gto.run/'>courses.gto.run</a>
+my teaching: <a href='http://gtozer.github.io/teaching'>gtozer.github.io/teaching</a>
 <br />
 This is it (for now).
 
