--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
           <link rel="stylesheet" href="styles/base.css">
           <link rel="stylesheet" href="styles/style.css">
-          
+    <title>G.T. OZER</title>      
     </head>
 
     <body>
