--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,3 +1,4 @@
 Big Data and Artificial Intelligence (graduate): <a href="http://bigdata.gto.run">bigdata.gto.run</a><br />
 Data Mining and Predictive Analysis (graduate): <a href="http://predict.gto.run">predict.gto.run</a><br />
-Information Systems: Strategy, Software, and Data: <a href="http://301.gto.run">301.gto.run</a>
+Data Mining and Predictive Analysis (graduate -MBA version): <a href="http://data.gto.run">data.gto.run</a><br />
+Managing Information Systems: Strategy, Software, and Data: <a href="http://301.gto.run">301.gto.run</a>
