--- a/quotes.html
+++ b/quotes.html
@@ -1,2 +1,2 @@
-“Wealth consists not in having great possessions, but in having few wants.” — Epictetus <br />
+“Wealth consists not in having great possessions, but in having few wants.” — Epictetus <br /><br />
 “A human being should be able to change a diaper, plan an invasion, butcher a hog, conn a ship, design a building, write a sonnet, balance accounts, build a wall, set a bone, comfort the dying, take orders, give orders, cooperate, act alone, solve equations, analyse a new problem, pitch manure, program a computer, cook a tasty meal, fight efficiently, die gallantly. Specialization is for insects” — Robert Heinlein
