--- a/quotes.html
+++ b/quotes.html
@@ -1,3 +1,4 @@
 “Wealth consists not in having great possessions, but in having few wants.” — Epictetus <br /><br />
 “A human being should be able to change a diaper, plan an invasion, butcher a hog, conn a ship, design a building, write a sonnet, balance accounts, build a wall, set a bone, comfort the dying, take orders, give orders, cooperate, act alone, solve equations, analyse a new problem, pitch manure, program a computer, cook a tasty meal, fight efficiently, die gallantly. Specialization is for insects” — Robert Heinlein <br /><br />
 “Deprived of meaningful work, men and women lose their reason for existence; they go stark, raving mad.” — Fyodor Dostoevsky <br /><br />
+“Finding the truth is difficult, and the road to it is rough.” — Ibn al-Haytham <br /><br />
