Update and rename kmeans.html to index.html

--- a/kmeans/index.html
+++ b/kmeans/index.html
@@ -61,7 +61,7 @@
       </div>
     </div>
     <footer>
-      Made by <a href='http://www.stanford.edu/~kvmohan'>Karanveer Mohan</a> for <a href='http://ee103.stanford.edu/'>EE103</a>. Source code on <a href='https://github.com/karanveerm/kmeans'>Github</a>.
+      Credits to <a href='http://www.stanford.edu/~kvmohan'>Karanveer Mohan</a>.
     </footer>
   </div>
   <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
