--- a/quotes.html
+++ b/quotes.html
@@ -3,3 +3,4 @@
 “Deprived of meaningful work, men and women lose their reason for existence; they go stark, raving mad.” — Fyodor Dostoevsky <br /><br />
 “Finding the truth is difficult, and the road to it is rough.” — Ibn al-Haytham <br /><br />
 “The mystery of human existence lies not in just staying alive, but in finding something to live for.” — Fyodor Dostoevsky <br /><br />
+“Far better an approximate answer to the right question, which is often vague, than an exact answer to the wrong question, which can always be made precise.” — John Tukey <br /><br />
