--- a/index.html
+++ b/index.html
@@ -61,7 +61,121 @@
             <div data-columns="1" id="ih4yf" class="row"><div data-column="1" id="icds2" class="cell"><div id="iht7" class="gpd-feature-card"><div id="isgj" class="gpd-feature-card__body"><h2 id="i32ou" class="gpd-feature-card__title">Gorkem Turgut (G.T.) OZER​<span class="text-grayish">, MBA, MSc, PhD</span></h2>
             <h4 id="iau5s" class="gpd-feature-card__subtitle">Advisor, Assistant Professor of Business Analytics and Strategy<br>at the Robert H. Smith School of Business, University of Maryland</h4><div id="i3mpd" class="gpd-feature-card__text"><i>For most up to date information, please see <a data-cke-saved-href="http://linkedin.com/in/gtozer" href="http://linkedin.com/in/gtozer">linkedin.com/in/gtozer</a>&nbsp;and&nbsp;<a data-cke-saved-href="http://rhsmith.umd.edu/directory/gorkem-turgut-ozer" href="http://rhsmith.umd.edu/directory/gorkem-turgut-ozer">rhsmith.umd.edu/directory/gorkem-turgut-ozer</a></i><br><br>
             <strong>Courses I have taught:</strong><ul><li>Data Mining and Predictive Analytics (Graduate -MSIS, MSBA):&nbsp;<a data-cke-saved-href="http://predict.gto.run" href="http://predict.gto.run">predict.gto.run</a></li><li>Data Mining and Predictive Analytics (Graduate -MBA version):&nbsp;<a data-cke-saved-href="http://data.gto.run" href="http://data.gto.run">data.gto.run</a></li><li>Big Data and Artificial Intelligence (Graduate -MBA, OMSBA):&nbsp;<a data-cke-saved-href="http://bigdata.gto.run" href="http://bigdata.gto.run">bigdata.gto.run</a></li><li>Managing Information Systems: Strategy, Software, and Data:&nbsp;<a data-cke-saved-href="http://301.gto.run" href="http://301.gto.run">301.gto.run</a></li></ul>
-            <strong>Research projects I have worked on:</strong>            
+            <strong>Research projects I have worked on:</strong>
+<table>
+  <tr>
+   <td colspan="3" ><strong>RESEARCH PROJECTS</strong>
+   </td>
+  </tr>
+  <tr>
+   <td colspan="3" ><strong>Strategy and societal/governance problems in digital
+platforms</strong>
+<ul>
+<li>Noisebnb: An empirical analysis of home sharing platforms (e.g., Airbnb,
+Vrbo/HomeAway) and noise complaints: Implications for policy and governance
+<em>(with Anand Gopal and Brad Greenwood)</em>, Under review
+</li> </ul>
+    <em>Diff-in-diff and Bayesian analysis of 15 years of data on noise
+complaints following Airbnb’s entry into New York City.</em>
+<ul>
+<li>Covid and chill: An empirical analysis of digital entertainment consumption
+(e.g., Spotify) <em>(along with the use of cannabis in the states where it is
+legal)</em> during the COVID-19 pandemic, Work in progress <em>-Early Stage</em>
+</li> </ul>
+    <em>Analysis of Spotify streams (and potential complementarity/substitution
+with the use of cannabis) during COVID-19.</em>
+<ul>
+<li>Digital multisided platforms and women's health: An empirical analysis of
+peer-to-peer lending platforms (e.g., LendingClub, Prosper) and abortion rates
+<em>(with Brad Greenwood and Anand Gopal)</em>, Under review
+</li> </ul>
+    <em>Poisson QML diff-in-diff analysis on data from Lending Club, CDC, State
+Health Departments, and the U.S. Census.</em>
+<ul>
+<li>Does social comparison tendency make the users social media platforms less
+altruistic? An experimental analysis of behavioral biases caused by “Instagram
+perfect” <em>(with Gordon Gao and Yifei Wang)</em>, Work in progress
+</li> </ul>
+    <em>Experimental analysis of donations by supplementing an Amazon Turk study
+with a convolutional neural network.</em>
+<ul>
+<li>On examining the performance implications of diversified vs. specialized
+variety on platforms for creative products in retail: An institutional logics
+perspective <em>(with Sirkka Jarvenpaa and Anand Gopal)</em>, Under review
+</li> </ul>
+    <em>Clustering and panel analysis of 260K products on Ravelry, a marketplace
+like Etsy, for designers of clothing items.</em>
+<ul>
+<li>Competitive (dis)advantage through learning in multisided platforms:
+Strategic implications of opening access to different platform sides<em> (with
+Edward Anderson, Patrick Figge, and Jeffrey Martin)</em>, Under review
+</li> </ul>
+    <em>Agent-based computer simulation of platform strategies that leverage
+learning from competitors.</em>
+<ul>
+<li><strong><em>On Hold:</em></strong> Better going alone or with some company?
+An empirical analysis and comparison of rental revenues in Airbnb and HomeAway
+for individual and professionally-managed listings, Work in progress
+</li> </ul>
+    <em>Empirical analysis of 1.5 million vacation rentals in Los Angeles, CA to
+compare revenue models.</em>
+<strong>Digital transformation through big data and intelligent agents</strong>
+<ul>
+<li>Data centricity: Strategy that incorporates big data and artificial
+intelligence in its guiding policy and actions
+</li> </ul>
+    <em>Data strategy framework on value creation and capture through leveraging
+large datasets and emerging algorithms.</em>
+<ul>
+<li>Resilience of sharing economy platforms to COVID-19: How do platform owners
+support third party complementors while navigating through the crisis? <em>(with
+Sirkka Jarvenpaa)</em>, Work in progress
+</li> </ul>
+    <em>Text analysis of the announcements made by digital sharing economy
+platforms before and after COVID-19 hit.</em>
+<ul>
+<li>When algorithms check on other algorithms: Anomaly detection in the age of
+“big data” <em>(with Courtney Paulson)</em>, Work in progress <em>-Early
+stage</em>
+</li> </ul>
+    <em>Review of selected anomaly detection algorithms, performance tests, and
+the development of a typology.</em>
+<ul>
+<li><strong><em>On Hold:</em></strong> Use of deep learning algorithms for the
+detection and diagnosis of pulmonary nodules: A large-scale experimental
+analysis <em>(with Kunpeng Zhang and Tony Lin, M.D.)</em>, Work in progress
+</li> </ul>
+    <em>Comparing the effectiveness of pulmonary nodule detection between a
+neural network, physician, their collaboration.</em>
+<ul>
+<li><strong><em>On Hold:</em></strong> Spillover effects of selected
+neighborhood incidents on the revenues and Yelp ratings of restaurants: A
+large-scale empirical analysis, Work in progress <em>-Early stage</em>
+</li> </ul>
+    <em>Creating a metric using 40 million records from 16 U.S. cities for the
+impact of incidents such as graffiti reports.</em>
+<strong>Other published work</strong>
+<ul>
+<li>Combining stock‐and‐flow, agent‐based, and social network methods to model
+team performance <em>(with Edward Anderson and Kyle Lewis)</em>, Published in
+System Dynamics Review with doi.org/10.1002/sdr.1613
+</li> </ul>
+    <em>Comparing stock‐and‐flow models, agent‐based models, and social network
+analysis to argue for the advantages of a hybrid approach to the modeling of
+team science.</em>
+<ul>
+<li>Behavioral biases in consumer decision making: Findings from a survey on
+financial behavior <em>(with Adil Oran and Ozlem Yilmaz)</em>, Published in DEU
+Economics and Administrative Sciences Journal with ISSN:1303-0027
+</li> </ul>
+    <em>Survey and statistical analysis of the implications of behavioral biases
+for personal finance decisions.</em>
+   </td>
+  </tr>
+</table>
+
+                
+                
             <p><em>Business implications of big data and artificial intelligence</em><ul><li><a data-cke-saved-href="https://datacentricity.org" href="https://datacentricity.org">Data centricity</a>: A strategy that incorporates big data analytics and artificial intelligence in its governing policy and actions, Work in progress [Strategy framework on value creation and capture through big data and AI]</li><li>Use of deep learning algorithms for the detection and diagnosis of pulmonary nodules: A large-scale experimental analysis (with Kunpeng Zhang), Work in progress [Comparing the effectiveness of pulmanory nodule detection -number, location, malignancy- between a neural network, physician, and their collaboration]</li></ul><em>Strategy problems in and around multisided digital platforms (a.k.a. sharing economy, peer-to-peer markets)</em><ul><li>Better going alone or with some company? An empirical analysis and comparison of rental revenues in Airbnb and HomeAway for individual and professionally-managed listings (with Siva Viswanathan), Work in progress [Analysis of 1.5 million observations in Los Angeles, CA to compare two revenue models in vacation rentals]</li><li>Competitive (dis)advantage through learning in multisided platforms: The strategic implications of opening to different platform sides (with Jeffrey A. Martin and Edward G. Anderson), Under review [An agent-based computer simulation of platform strategies that leverage learning from rival platforms for competitive edge]</li><li>Creative vs. pragmatic variety: On the tradeoff between the professional and market logics in digital platforms for creative products (with Sirkka L. Jarvenpaa and Anand Gopal), Work in progress [Empirical analysis of how artistic motives vs. profits drive product development decisions of designers in platforms for creative products]</li></ul><em>Societal problems in and around multisided digital platforms</em><ul><li>Noisebnb: An empirical analysis of noise complaints and platform housing rentals (with Anand Gopal and Brad N. Greenwood), Work in progress [Empirical analysis of changes in the levels of noise and associated noise complaints in urban settings after the introduction of short-term rentals through marketplaces such as Airbnb]</li><li>Effects of social comparison tendency on online donation behavior: An experimental analysis of behavioral biases due to social comparison in Instagram (with Yifei Wang and Gordon Gao), Work in progress [Empirical analysis of social comparison across demographics using a lab experiment and convolutional neural network]</li><li>Digital multisided platforms and women's health: An empirical analysis of peer-to-peer lending and abortion rates (with Anand Gopal and Brad N. Greenwood), Work in progress [Empirical analysis combining datasets from Lending Club, Centers for Disease Control and Prevention, State Health Departments, and U.S. Census]</li></ul><em>Governance problems in and around multisided digital platforms</em><ul><li>Effects of selected neighborhood incidents on the Yelp reviews of restaurants&nbsp;and restaurant revenues: A nationwide empirical analysis, Work in progress [Empirical analysis of over 40 million records from 16 U.S. cities to measure the impact of incidents such as graffiti reports, noise reports, and other resident complaints]<br></li><li>Tension between change and stability in digital multisided platforms: How do platform operators navigate through governing differences, dependencies, and novelty? (with Sirkka L. Jarvenpaa), Under review [Theory development on how multisided platform operators manage their relationships with third party complementors]</li></ul><em>Other published research</em><ul><li>Combining stock‐and‐flow, agent‐based, and social network methods to model team performance (with Edward G. Anderson and Kyle Lewis), Published in System Dynamics Review with doi.org/10.1002/sdr.1613</li><li>Cognitive biases in decision making: Findings from a survey on consumer financial behavior (with Adil Oran and Ozlem Yilmaz), Published in DEU Economics and Administrative Sciences Journal with ISSN:1303-0027</li></ul></p>
             </div>
             <div id="iyomh" class="row"><div id="iouh6" class="cell"><a href="https://archive.gtozer.net" target="_blank" class="gpd-icon footer-icon">
