--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <strong>Courses I have taught:</strong><ul><li>Data Mining and Predictive Analytics (Graduate -MSIS, MSBA):&nbsp;<a data-cke-saved-href="http://predict.gto.run" href="http://predict.gto.run">predict.gto.run</a></li><li>Data Mining and Predictive Analytics (Graduate -MBA version):&nbsp;<a data-cke-saved-href="http://data.gto.run" href="http://data.gto.run">data.gto.run</a></li><li>Big Data and Artificial Intelligence (Graduate -MBA, OMSBA):&nbsp;<a data-cke-saved-href="http://bigdata.gto.run" href="http://bigdata.gto.run">bigdata.gto.run</a></li><li>Managing Information Systems: Strategy, Software, and Data:&nbsp;<a data-cke-saved-href="http://301.gto.run" href="http://301.gto.run">301.gto.run</a></li></ul>
             <strong>Research projects I have worked on:</strong>
 
-<strong>Strategy and societal/governance problems in digital
+<br><strong>Strategy and societal/governance problems in digital
 platforms</strong>
 <ul>
 <li>Noisebnb: An empirical analysis of home sharing platforms (e.g., Airbnb,
@@ -114,7 +114,7 @@ for individual and professionally-managed listings, Work in progress
 </li> </ul>
     <em>Empirical analysis of 1.5 million vacation rentals in Los Angeles, CA to
 compare revenue models.</em>
-<strong>Digital transformation through big data and intelligent agents</strong>
+<br><strong>Digital transformation through big data and intelligent agents</strong>
 <ul>
 <li>Data centricity: Strategy that incorporates big data and artificial
 intelligence in its guiding policy and actions
@@ -149,7 +149,7 @@ large-scale empirical analysis, Work in progress <em>-Early stage</em>
 </li> </ul>
     <em>Creating a metric using 40 million records from 16 U.S. cities for the
 impact of incidents such as graffiti reports.</em>
-<strong>Other published work</strong>
+<br><strong>Other published work</strong>
 <ul>
 <li>Combining stock‐and‐flow, agent‐based, and social network methods to model
 team performance <em>(with Edward Anderson and Kyle Lewis)</em>, Published in
