--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                 
 <br>
-<em>Strategy and societal/governance problems in digital
+<em>Strategy and societal/governance problems in and around digital
 platforms</em>
 <ul>
 <li>Noisebnb: An empirical analysis of home sharing platforms (e.g., Airbnb,
