--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ compare revenue models.</em>
 
 <em>Digital transformation through big data and intelligent agents</em>
 <ul>
-<li>Data centricity: Strategy that incorporates big data and artificial
+    <li><a href="https://datacentricity.org/">Data centricity</a>: Strategy that incorporates big data and artificial
 intelligence in its guiding policy and actions
 </li>
     <em>Data strategy framework on value creation and capture through leveraging
