--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ complaints following Airbnb’s entry into New York City.</em>
 
 <li>Covid and chill: An empirical analysis of digital entertainment consumption
 (e.g., Spotify) <em>(along with the use of cannabis in the states where it is
-legal)</em> during the COVID-19 pandemic, Work in progress <em>-Early Stage</em>
+legal)</em> during the COVID-19 pandemic, Work in progress <em>-Early stage</em>
 </li>
     <em>Analysis of Spotify streams (and potential complementarity/substitution
 with the use of cannabis) during COVID-19.</em>
