--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <li><a href="https://datacentricity.org/">Data centricity</a>: Strategy that incorporates big data and artificial intelligence in its guiding policy and actions
 </li>
 
-    <em>Management strategy framework on value creation and capture through the use of big data and emerging algorithms.</em>
+    <em>Management strategy framework on value creation and capture through the use of big data & emerging algorithms.</em>
 
 
 <li>Resilience of sharing economy platform policies to COVID-19: How do platform owners change their governance strategies while navigating through the crisis? <em>(with Sirkka Jarvenpaa)</em>, Work in progress
@@ -131,7 +131,7 @@
 <li>When algorithms check on other algorithms: Anomaly detection in the age of “big data” <em>(with Courtney Paulson)</em>, Work in progress <em>-Early stage</em>
 </li>
 
-    <em>Review of anomaly detection algorithms, efficacy tests in business analytics context, and the development of a typology.</em>
+    <em>Review and tests of anomaly detection algorithms in the business analytics context and the development of a typology.</em>
 
 
 <li><strong><em>On Hold:</em></strong> Use of deep learning algorithms for the detection and diagnosis of pulmonary nodules: A large-scale experimental analysis <em>(with Kunpeng Zhang and Tony Lin, M.D.)</em>, Work in progress
@@ -161,7 +161,8 @@
 </li>
 
     <em>Survey and statistical analysis of the implications of behavioral biases for personal finance decisions.</em>
-</ul>
+</ul> 
+
                 
                 
             </div>
