--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <li>When algorithms check on other algorithms: Anomaly detection in the age of “big data” <em>(with Courtney Paulson)</em>, Work in progress <em>-Early stage</em>
 </li>
 
-    <em>Review and tests of anomaly detection algorithms in the business analytics context and the development of a typology.</em>
+    <em>Review & tests of anomaly detection algorithms in the business analytics context and the development of a typology.</em>
 
 
 <li><strong><em>On Hold:</em></strong> Use of deep learning algorithms for the detection and diagnosis of pulmonary nodules: A large-scale experimental analysis <em>(with Kunpeng Zhang and Tony Lin, M.D.)</em>, Work in progress
