--- a/course-archive.html
+++ b/course-archive.html
@@ -1,11 +1,32 @@
 <html>
 <strong>Older versions of the courses I have taught for archiving purposes:</strong>
 <ul>
-<li>Data Mining and Predictive Analytics (Graduate -MSIS, MSBA)
-<li><a data-cke-saved-href="http://predict.gto.run" href="http://predict.gto.run">predict.gto.run</a></li>
-</li>
-<li>Data Mining and Predictive Analytics (Graduate -MBA version):&nbsp;<a data-cke-saved-href="http://data.gto.run" href="http://data.gto.run">data.gto.run</a></li>
-<li>Big Data and Artificial Intelligence (Graduate -MBA, OMSBA):&nbsp;<a data-cke-saved-href="http://bigdata.gto.run" href="http://bigdata.gto.run">bigdata.gto.run</a></li>
-<li>Managing Information Systems: Strategy, Software, and Data:&nbsp;<a data-cke-saved-href="http://301.gto.run" href="http://301.gto.run">301.gto.run</a></li>
+  <li>Data Mining and Predictive Analytics (Graduate -MSIS, MSBA)
+    <ul>
+      <li><a href="https://docs.google.com/document/d/1_p2f-l3RcuFjobI0nTwcQqXoF64WqeOtGqoX1j8Wmaw/edit?usp=sharing">Spring 2019</a></li>
+      <li><a href="https://docs.google.com/document/d/1UmmcaA5lZQ3Lb4XnnsuWrF9HSRoC5L5nihOxTw4pZMc/edit?usp=sharing">Spring 2020</a></li>
+      <li><a href="http://predict.gto.run">Latest version</a></li>
+    </ul>
+  </li>
+  <li>Data Mining and Predictive Analytics (Graduate -MBA version)
+    <ul>
+      <li><a href="https://docs.google.com/document/d/1ZOlJy7QYq_kxXh-BysIcZT9dnSVLhdm7oxgQSA7VWmA/edit?usp=sharing">Summer 2019</a></li>
+      <li><a href="http://data.gto.run">Latest version</a></li>
+    </ul>
+  </li>
+  <li>Big Data and Artificial Intelligence (Graduate -MBA, MSIS, MSBA)
+    <ul>
+      <li><a href="https://docs.google.com/document/d/1q-vzJWH3S8At2dd-UryzgIZ680D1H09xn0FLpwJYvX0/edit?usp=sharing">Fall 2018 (MBA)</a></li>
+      <li><a href="http://bigdata.gto.run">Latest version (MSIS/MSBA)</a></li>
+    </ul>  
+  </li>
+  <li>Managing Information Systems: Strategy, Software, and Data
+    <ul>
+      <li><a href="TBA">Fall 2014</a></li>
+      <li><a href="https://docs.google.com/document/d/1Vz36Nn9mFBsfvuzAe97KeqQ-R5JSY1tzAHuuxBm9yhY/edit?usp=sharing">Spring 2018</a></li>
+      <li><a href="https://docs.google.com/document/d/1E7Sh_XNYXHqlhDquPlkKs7bNZxkBnYtuxg0C4ajmIaw/edit?usp=sharing">Spring 2019</a></li>
+      <li><a href="http://301.gto.run">Latest version</a></li>
+    </ul>
+  </li>
 </ul>
 </html>
