--- a/course-archive.html
+++ b/course-archive.html
@@ -5,6 +5,7 @@
     <ul>
       <li><a href="https://docs.google.com/document/d/1_p2f-l3RcuFjobI0nTwcQqXoF64WqeOtGqoX1j8Wmaw/edit?usp=sharing">Spring 2019</a></li>
       <li><a href="https://docs.google.com/document/d/1UmmcaA5lZQ3Lb4XnnsuWrF9HSRoC5L5nihOxTw4pZMc/edit?usp=sharing">Spring 2020</a></li>
+      <li><a href="https://docs.google.com/document/d/1R3ARppFffX1jgVmxpCpQdDC4FUYdYXZHhQhSyBKu5jM/edit?usp=sharing">Spring 2021</a></li>
       <li><a href="http://predict.gto.run">Latest version</a></li>
     </ul>
   </li>
