--- a/detectiveSeries.html
+++ b/detectiveSeries.html
@@ -5,3 +5,4 @@ The Break (Belgium, 2016): https://www.imdb.com/title/tt4792480/ <br /><br />
 Unforgotten (UK, 2015): https://www.imdb.com/title/tt4192812/ <br /><br />
 Babylon Berlin (Germany, 2017): https://www.imdb.com/title/tt4378376/ [Except S03] <br /><br />
 Bordertown (Finland, 2016-20):https://www.imdb.com/title/tt4937942/ <br /><br />
+Masum (Turkey, 2017): https://www.imdb.com/title/tt6478318/ <br /><br />
