--- a/course-archive.html
+++ b/course-archive.html
@@ -13,6 +13,7 @@
   <li>Data Mining and Predictive Analytics (Graduate -MBA version)
     <ul>
       <li><a href="https://docs.google.com/document/d/1ZOlJy7QYq_kxXh-BysIcZT9dnSVLhdm7oxgQSA7VWmA/edit?usp=sharing">Summer 2019</a></li>
+      <li><a href="https://docs.google.com/document/d/1sLAY83j9iGPH_SiggDXZ0BvI9dADBH9szOA8Nq4O1eI/edit?usp=sharing">Spring 2021</a></li>
       <li><a href="http://data.gto.run">Latest version</a></li>
     </ul>
   </li>
