--- a/course-archive.html
+++ b/course-archive.html
@@ -7,20 +7,22 @@
       <li><a href="https://docs.google.com/document/d/1UmmcaA5lZQ3Lb4XnnsuWrF9HSRoC5L5nihOxTw4pZMc/edit?usp=sharing">Spring 2020</a></li>
       <li><a href="https://docs.google.com/document/d/1R3ARppFffX1jgVmxpCpQdDC4FUYdYXZHhQhSyBKu5jM/edit?usp=sharing">Spring 2021</a></li>
       <li><a href="https://docs.google.com/document/d/1G5CZgLAe27jDA_b3-B_ZJHHiZvlgPRo_6UUi9PM-z6s/edit?usp=sharing">Fall 2021</a></li>
-      <li><a href="http://predict.gto.run">Latest version</a></li>
+      <li><a href="https://docs.google.com/document/d/1kMCCRDVg6DlonQl3QvJdpAPIVKBL8XzaRMsdxnxyrOw/edit?usp=sharing">Spring 2022</a></li>
+      <li><a href="https://ozer.gt/predict">Latest version</a></li>
     </ul>
   </li>
   <li>Data Mining and Predictive Analytics (Graduate -MBA version)
     <ul>
       <li><a href="https://docs.google.com/document/d/1ZOlJy7QYq_kxXh-BysIcZT9dnSVLhdm7oxgQSA7VWmA/edit?usp=sharing">Summer 2019</a></li>
       <li><a href="https://docs.google.com/document/d/1sLAY83j9iGPH_SiggDXZ0BvI9dADBH9szOA8Nq4O1eI/edit?usp=sharing">Spring 2021</a></li>
-      <li><a href="http://data.gto.run">Latest version</a></li>
+      <li><a href="https://docs.google.com/document/d/1xlEIRw4bd-singKXnCNtMCQK4okprePFYv0vT5sDLT0/edit?usp=sharing">Spring 2022</a></li>
+      <li><a href="https://ozer.gt/data">Latest version</a></li>
     </ul>
   </li>
   <li>Big Data and Artificial Intelligence (Graduate -MBA, MSIS, MSBA)
     <ul>
       <li><a href="https://docs.google.com/document/d/1q-vzJWH3S8At2dd-UryzgIZ680D1H09xn0FLpwJYvX0/edit?usp=sharing">Fall 2018 (MBA)</a></li>
-      <li><a href="http://bigdata.gto.run">Latest version (MSIS/MSBA)</a></li>
+      <li><a href="https://ozer.gt/bigdata">Latest version (MSIS/MSBA)</a></li>
     </ul>  
   </li>
   <li>Managing Information Systems: Strategy, Software, and Data
@@ -28,7 +30,7 @@
       <li><a href="https://link-to-be-added">Fall 2014</a></li>
       <li><a href="https://docs.google.com/document/d/1Vz36Nn9mFBsfvuzAe97KeqQ-R5JSY1tzAHuuxBm9yhY/edit?usp=sharing">Spring 2018</a></li>
       <li><a href="https://docs.google.com/document/d/1E7Sh_XNYXHqlhDquPlkKs7bNZxkBnYtuxg0C4ajmIaw/edit?usp=sharing">Spring 2019</a></li>
-      <li><a href="http://301.gto.run">Latest version</a></li>
+      <li><a href="https://ozer.gt/301">Latest version</a></li>
     </ul>
   </li>
 </ul>
