--- a/course-archive.html
+++ b/course-archive.html
@@ -1,7 +1,7 @@
 <html>
 <strong>Older versions of the courses I have taught for archiving purposes:</strong>
 <ul>
-  <li>Data Mining and Predictive Analytics (Graduate -MSIS, MSBA)
+  <li>Data Mining and Predictive Analytics (Graduate -MSIS, MSBA; Senior -ISBA)
     <ul>
       <li><a href="https://docs.google.com/document/d/1_p2f-l3RcuFjobI0nTwcQqXoF64WqeOtGqoX1j8Wmaw/edit?usp=sharing">Spring 2019</a></li>
       <li><a href="https://docs.google.com/document/d/1UmmcaA5lZQ3Lb4XnnsuWrF9HSRoC5L5nihOxTw4pZMc/edit?usp=sharing">Spring 2020</a></li>
