--- a/course-archive.html
+++ b/course-archive.html
@@ -1,17 +1,18 @@
 <html>
 <strong>Older versions of the courses I have taught for archiving purposes:</strong>
 <ul>
-  <li>Data Mining and Predictive Analytics (Graduate -MSIS, MSBA; Senior -ISBA)
+  <li>Predictive Analytics and Modeling (Graduate -MSIS, MSBA; Senior -ISBA)
     <ul>
       <li><a href="https://docs.google.com/document/d/1_p2f-l3RcuFjobI0nTwcQqXoF64WqeOtGqoX1j8Wmaw/edit?usp=sharing">Spring 2019</a></li>
       <li><a href="https://docs.google.com/document/d/1UmmcaA5lZQ3Lb4XnnsuWrF9HSRoC5L5nihOxTw4pZMc/edit?usp=sharing">Spring 2020</a></li>
       <li><a href="https://docs.google.com/document/d/1R3ARppFffX1jgVmxpCpQdDC4FUYdYXZHhQhSyBKu5jM/edit?usp=sharing">Spring 2021</a></li>
       <li><a href="https://docs.google.com/document/d/1G5CZgLAe27jDA_b3-B_ZJHHiZvlgPRo_6UUi9PM-z6s/edit?usp=sharing">Fall 2021</a></li>
       <li><a href="https://docs.google.com/document/d/1kMCCRDVg6DlonQl3QvJdpAPIVKBL8XzaRMsdxnxyrOw/edit?usp=sharing">Spring 2022</a></li>
+      <li><a href="https://docs.google.com/document/d/1iWRuARF_idimt022r2c-7ZahafRZAbuAYqjDnVZRyWs/edit?usp=sharing">Fall 2022</a></li>
       <li><a href="https://ozer.gt/predict">Latest version</a></li>
     </ul>
   </li>
-  <li>Data Mining and Predictive Analytics (Graduate -MBA version)
+  <li>Predictive Analytics and Modeling (Graduate -MBA version)
     <ul>
       <li><a href="https://docs.google.com/document/d/1ZOlJy7QYq_kxXh-BysIcZT9dnSVLhdm7oxgQSA7VWmA/edit?usp=sharing">Summer 2019</a></li>
       <li><a href="https://docs.google.com/document/d/1sLAY83j9iGPH_SiggDXZ0BvI9dADBH9szOA8Nq4O1eI/edit?usp=sharing">Spring 2021</a></li>
