--- a/course-archive.html
+++ b/course-archive.html
@@ -20,7 +20,7 @@
       <li><a href="https://ozer.gt/data">Latest version</a></li>
     </ul>
   </li>
-  <li>Big Data and Artificial Intelligence (Graduate -MBA, MSIS, MSBA)
+  <li>Big Data and Artificial Intelligence (Graduate -MSBA)
     <ul>
       <li><a href="https://docs.google.com/document/d/1q-vzJWH3S8At2dd-UryzgIZ680D1H09xn0FLpwJYvX0/edit?usp=sharing">Fall 2018 (MBA)</a></li>
       <li><a href="https://ozer.gt/bigdata">Latest version (MSIS/MSBA)</a></li>
