--- a/quotes.html
+++ b/quotes.html
@@ -6,3 +6,4 @@
 “Far better an approximate answer to the right question, which is often vague, than an exact answer to the wrong question, which can always be made precise.” — John Tukey <br /><br />
 “The market can remain irrational longer than you can remain solvent.” — Gary Shilling <br /><br />
 “A calm and modest life brings more happiness than the pursuit of success combined with constant restlessness." — Albert Einstein <br /><br />
+"If people do not believe that mathematics is simple, it is only because they do not realize how complicated life is." — John von Neumann <br /><br />
