--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             }
         </style>
         <section id="ilnbw"><div id="ivjjm" class="container">
-            <div data-columns="1" id="ih4yf" class="row"><div data-column="1" id="icds2" class="cell"><div id="iht7" class="gpd-feature-card"><div id="isgj" class="gpd-feature-card__body"><h2 id="i32ou" class="gpd-feature-card__title">Gorkem Turgut (G.T.) OZER​<span class="text-grayish">, MBA, MSc, PhD</span></h2>
-            <h4 id="iau5s" class="gpd-feature-card__subtitle">Advisor, Assistant Professor of Business Analytics and Strategy<br>at the Robert H. Smith School of Business, University of Maryland</h4><div id="i3mpd" class="gpd-feature-card__text"><i>For most up to date information, please see <a data-cke-saved-href="http://linkedin.com/in/gtozer" href="http://linkedin.com/in/gtozer">linkedin.com/in/gtozer</a>&nbsp;and&nbsp;<a data-cke-saved-href="http://rhsmith.umd.edu/directory/gorkem-turgut-ozer" href="http://rhsmith.umd.edu/directory/gorkem-turgut-ozer">rhsmith.umd.edu/directory/gorkem-turgut-ozer</a></i><br><br>
-            <strong>Courses I have taught:</strong><ul><li>Data Mining and Predictive Analytics (Graduate -MSIS, MSBA):&nbsp;<a data-cke-saved-href="http://predict.gto.run" href="http://predict.gto.run">predict.gto.run</a></li><li>Data Mining and Predictive Analytics (Graduate -MBA version):&nbsp;<a data-cke-saved-href="http://data.gto.run" href="http://data.gto.run">data.gto.run</a></li><li>Big Data and Artificial Intelligence (Graduate -MBA, OMSBA):&nbsp;<a data-cke-saved-href="http://bigdata.gto.run" href="http://bigdata.gto.run">bigdata.gto.run</a></li><li>Managing Information Systems: Strategy, Software, and Data:&nbsp;<a data-cke-saved-href="http://301.gto.run" href="http://301.gto.run">301.gto.run</a></li></ul>
+            <div data-columns="1" id="ih4yf" class="row"><div data-column="1" id="icds2" class="cell"><div id="iht7" class="gpd-feature-card"><div id="isgj" class="gpd-feature-card__body"><h2 id="i32ou" class="gpd-feature-card__title">Gorkem Turgut (G.T.) Ozer<span class="text-grayish">, MBA, MSc, PhD</span></h2>
+            <h4 id="iau5s" class="gpd-feature-card__subtitle">Advisor, Decision Sciences Professor at the Paul College of Business and Economics</h4><div id="i3mpd" class="gpd-feature-card__text"><i>For most up to date information, please see <a data-cke-saved-href="http://linkedin.com/in/gtozer" href="http://linkedin.com/in/gtozer">linkedin.com/in/gtozer</a></i><br><br>
+            <strong>Courses I have taught:</strong><ul><li>Predictive Analytics and Modeling (Graduate -MSIS, MSBA):&nbsp;<a data-cke-saved-href="https://ozer.gt/predict" href="https://ozer.gt/predict">ozer.gt/predict</a></li><li>Predictive Analytics and Modeling (Graduate -MBA version):&nbsp;<a data-cke-saved-href="https://ozer.gt/data" href="https://ozer.gt/data">ozer.gt/data</a></li><li>Big Data and Artificial Intelligence (Graduate -MSBA):&nbsp;<a data-cke-saved-href="https://ozer.gt/bigdata" href="https://ozer.gt/bigdata">ozer.gt/bigdata</a></li><li>Managing Information Systems: Strategy, Software, and Data:&nbsp;<a data-cke-saved-href="https://ozer.gt/301" href="https://ozer.gt/301">ozer.gt/301</a></li></ul>
             <strong>Research projects I have worked on:</strong>
 
 
@@ -69,81 +69,81 @@
 <ul>
 
 
-<li>Noisebnb: An empirical analysis of home sharing platforms (e.g., Airbnb, Vrbo/HomeAway) and noise complaints: Implications for policy and governance <em>(with Anand Gopal and Brad Greenwood)</em>, Under review
+<li>.
 </li>
 
-    <em>Diff-in-diff and Bayesian analysis of 15 years of data on noise complaints following Airbnb’s entry into New York City.</em>
+    <em>.</em>
 
 
-<li>Covid and chill: An empirical analysis of the changes in digital entertainment consumption (i.e., daily streams of Spotify music/genres) and mobility patterns during the COVID-19 pandemic, Work in progress <em>-Early stage</em>
+<li>.
 </li>
 
-    <em>Analysis of Spotify streams (and potential complementarity/substitution with mobility patterns) during COVID-19.</em>
+    <em>.</em>
 
 
-<li>Digital multisided platforms and women's health: An empirical analysis of peer-to-peer lending platforms (e.g., LendingClub, Prosper) and access to healthcare <em>(with Brad Greenwood and Anand Gopal)</em>, Under review
+<li>. <em>.</em>, Under review
 </li>
 
-    <em>Poisson QML diff-in-diff analysis on data from Lending Club, CDC, State Health Departments, and the U.S. Census.</em>
+    <em>.</em>
 
 
-<li>Does social comparison tendency make the users social media platforms less altruistic? An experimental analysis of behavioral biases caused by “Instagram perfect” <em>(with Gordon Gao and Yifei Wang)</em>, Work in progress
+<li>. <em>.</em>, Work in progress
 </li>
 
-    <em>Experimental analysis of donations by supplementing an Amazon Turk study with a convolutional neural network.</em>
+    <em>.</em>
 
 
-<li>On examining the performance implications of diversified vs. specialized variety on platforms for creative products in retail: An institutional logics perspective <em>(with Sirkka Jarvenpaa and Anand Gopal)</em>, Under review
+<li>. <em>.</em>, Under review
 </li>
 
-    <em>Clustering and panel analysis of 260K products on Ravelry, a marketplace like Etsy, for designers of clothing items.</em>
+    <em>.</em>
 
 
-<li>Competitive (dis)advantage through learning in multisided platforms: Strategic implications of opening access to different platform sides<em> (with Edward Anderson, Patrick Figge, and Jeffrey Martin)</em>, Under review
+<li>. <em>.</em>, Under review
 </li>
 
-    <em>Agent-based computer simulation of platform strategies that leverage learning from competitors.</em>
+    <em>.</em>
 
 
-<li><strong><em>On Hold:</em></strong> Better going alone or with some company? An empirical analysis and comparison of rental revenues in Airbnb and HomeAway for individual and professionally-managed listings, Work in progress
+<li><strong><em>On Hold:</em></strong> .
 </li>
 
-    <em>Empirical analysis of 1.5 million vacation rentals in Los Angeles, CA to compare revenue models.</em>
+    <em>.</em>
 
 </li>
 </ul>
-<em>Digital transformation through big data and intelligent agents</em>
+<em>.</em>
 <ul>
 
 
 <li><a href="https://datacentricity.org/">Data centricity</a>: Strategy that incorporates big data and artificial intelligence in its guiding policy and actions
 </li>
 
-    <em>Management strategy framework on value creation and capture through the use of big data & emerging algorithms.</em>
+    <em>.</em>
 
 
-<li>Resilience of sharing economy platform policies to COVID-19: How do platform owners change their governance strategies while navigating through the crisis? <em>(with Sirkka Jarvenpaa)</em>, Work in progress
+<li>. <em>.</em>, Work in progress
 </li>
 
-    <em>Text analysis of the announcements made by digital sharing economy platforms during the COVID-19 pandemic.</em>
+    <em>.</em>
 
 
-<li>When algorithms check on other algorithms: Anomaly detection in the age of “big data” <em>(with Courtney Paulson)</em>, Work in progress <em>-Early stage</em>
+<li>. <em>.</em>, Work in progress <em>-Early stage</em>
 </li>
 
-    <em>Review & tests of anomaly detection algorithms in the business analytics context and the development of a typology.</em>
+    <em>.</em>
 
 
-<li><strong><em>On Hold:</em></strong> Use of deep learning algorithms for the detection and diagnosis of pulmonary nodules: A large-scale experimental analysis <em>(with Kunpeng Zhang and Tony Lin, M.D.)</em>, Work in progress
+<li><strong><em>On Hold:</em></strong>. <em>.</em>, Work in progress
 </li>
 
-    <em>Comparing the effectiveness of pulmonary nodule detection between a neural network, physician, their collaboration.</em>
+    <em>.</em>
 
 
-<li><strong><em>On Hold:</em></strong> Spillover effects of selected neighborhood incidents on the revenues and Yelp ratings of restaurants: A large-scale empirical analysis, Work in progress <em>-Early stage</em>
+<li><strong><em>On Hold:</em></strong>. <em>-Early stage</em>
 </li>
 
-    <em>Creating a metric using 40 million records from 16 U.S. cities for the impact of incidents such as graffiti reports.</em>
+    <em>.</em>
 
 </li>
 </ul>
@@ -151,16 +151,16 @@
 <ul>
 
 
-<li>Combining stock‐and‐flow, agent‐based, and social network methods to model team performance <em>(with Edward Anderson and Kyle Lewis)</em>, Published in System Dynamics Review with doi.org/10.1002/sdr.1613
+<li>. <em>.</em>, Published in 
 </li>
 
-    <em>Comparing stock‐and‐flow models, agent‐based models, and social network analysis to argue for the advantages of a hybrid approach to the modeling of team science.</em>
+    <em>.</em>
 
 
-<li>Behavioral biases in consumer decision making: Findings from a survey on financial behavior <em>(with Adil Oran and Ozlem Yilmaz)</em>, Published in DEU Economics and Administrative Sciences Journal with ISSN:1303-0027
+<li>. <em>.</em>, Published in 
 </li>
 
-    <em>Survey and statistical analysis of the implications of behavioral biases for personal finance decisions.</em>
+    <em>.</em>
 </ul> 
 
                 
