--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 
                 
             </div>
-            <div id="iyomh" class="row"><div id="iouh6" class="cell"><a href="https://archive.gtozer.net" target="_blank" class="gpd-icon footer-icon">
+            <div id="iyomh" class="row"><div id="iouh6" class="cell"><a href="https://archive.ozer.gt" target="_blank" class="gpd-icon footer-icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title"
             aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
               <path data-name="layer2"
@@ -203,6 +203,5 @@
     }
 
 </style>
-<a href="http://dc.mba/">dc.mba</a>
 </body>
 </html>
