--- a/course-archive.html
+++ b/course-archive.html
@@ -9,6 +9,7 @@
       <li><a href="https://docs.google.com/document/d/1G5CZgLAe27jDA_b3-B_ZJHHiZvlgPRo_6UUi9PM-z6s/edit?usp=sharing">Fall 2021</a></li>
       <li><a href="https://docs.google.com/document/d/1kMCCRDVg6DlonQl3QvJdpAPIVKBL8XzaRMsdxnxyrOw/edit?usp=sharing">Spring 2022</a></li>
       <li><a href="https://docs.google.com/document/d/1iWRuARF_idimt022r2c-7ZahafRZAbuAYqjDnVZRyWs/edit?usp=sharing">Fall 2022</a></li>
+      <li><a href="https://docs.google.com/document/d/12yp-sxo0o0lbN5YjnyHNb3FhuoNK1hDLZmindbYmGOw/edit?usp=sharing">Spring 2023</a></li>
       <li><a href="https://ozer.gt/predict">Latest version</a></li>
     </ul>
   </li>
@@ -17,12 +18,14 @@
       <li><a href="https://docs.google.com/document/d/1ZOlJy7QYq_kxXh-BysIcZT9dnSVLhdm7oxgQSA7VWmA/edit?usp=sharing">Summer 2019</a></li>
       <li><a href="https://docs.google.com/document/d/1sLAY83j9iGPH_SiggDXZ0BvI9dADBH9szOA8Nq4O1eI/edit?usp=sharing">Spring 2021</a></li>
       <li><a href="https://docs.google.com/document/d/1k9XsLi7M_TcrkMig8_aq8SDR-fS5FdS1njPbsEImNpc/edit?usp=sharing">Spring 2022</a></li>
+      <li><a href="https://docs.google.com/document/d/1xlEIRw4bd-singKXnCNtMCQK4okprePFYv0vT5sDLT0/edit?usp=sharing">Spring 2023</a></li>
       <li><a href="https://ozer.gt/data">Latest version</a></li>
     </ul>
   </li>
   <li>Big Data and Artificial Intelligence (Graduate -MSBA)
     <ul>
       <li><a href="https://docs.google.com/document/d/1q-vzJWH3S8At2dd-UryzgIZ680D1H09xn0FLpwJYvX0/edit?usp=sharing">Fall 2018 (MBA)</a></li>
+      <li><a href="https://docs.google.com/document/d/17AD48wM7BZieCB30YdNFYvI7hxX4_VYKOI4MVm_sbGU/edit?usp=sharing">Spring 2023</a></li>
       <li><a href="https://ozer.gt/bigdata">Latest version (MSIS/MSBA)</a></li>
     </ul>  
   </li>
