--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <ul>
 
 
-<li><a href="https://datacentricity.org/">Data centricity</a>: Strategy that incorporates big data and artificial intelligence in its guiding policy and actions
+<li><a href="https://datacentricity.org/">Data centricity</a>
 </li>
 
     <em>.</em>
