--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </style>
         <section id="ilnbw"><div id="ivjjm" class="container">
             <div data-columns="1" id="ih4yf" class="row"><div data-column="1" id="icds2" class="cell"><div id="iht7" class="gpd-feature-card"><div id="isgj" class="gpd-feature-card__body"><h2 id="i32ou" class="gpd-feature-card__title">Gorkem Turgut (G.T.) Ozer<span class="text-grayish">, MBA, MSc, PhD</span></h2>
-            <h4 id="iau5s" class="gpd-feature-card__subtitle">Decision Sciences Professor at the Paul College of Business and Economics</h4><div id="i3mpd" class="gpd-feature-card__text"><i>Please see <a data-cke-saved-href="https://ozer.gt/log" href="https://ozer.gt/log">ozer.gt/log</a> or <a data-cke-saved-href="https://linkedin.com/in/gtozer" href="https://linkedin.com/in/gtozer">linkedin.com/in/gtozer</a> for updates.</i></div>
+            <h4 id="iau5s" class="gpd-feature-card__subtitle">Decision Sciences Professor at the Paul College of Business and Economics</h4><div id="i3mpd" class="gpd-feature-card__text">Please see <a data-cke-saved-href="https://ozer.gt/log" href="https://ozer.gt/log">ozer.gt/log</a> or <a data-cke-saved-href="https://linkedin.com/in/gtozer" href="https://linkedin.com/in/gtozer">linkedin.com/in/gtozer</a> for updates.</div>
             <div id="iyomh" class="row"><div id="iouh6" class="cell"><a href="https://ozer.gt/log" target="_blank" class="gpd-icon footer-icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" aria-labelledby="title"
             aria-describedby="desc" role="img" xmlns:xlink="http://www.w3.org/1999/xlink">
