--- a/course-archive.html
+++ b/course-archive.html
@@ -20,6 +20,7 @@
       <li><a href="https://docs.google.com/document/d/1sLAY83j9iGPH_SiggDXZ0BvI9dADBH9szOA8Nq4O1eI/edit?usp=sharing">Spring 2021</a></li>
       <li><a href="https://docs.google.com/document/d/1k9XsLi7M_TcrkMig8_aq8SDR-fS5FdS1njPbsEImNpc/edit?usp=sharing">Spring 2022</a></li>
       <li><a href="https://docs.google.com/document/d/1MXcB1gi7apYIhL_T5bGyoXjaEa4aryW2okVg9P_-Rj4/edit?usp=sharing">Spring 2023</a></li>
+      <li><a href="https://docs.google.com/document/d/1U9WC6gjyKI3va1_0DGpRPTtNpYAB-J2am9ghf7709Zw/edit?usp=sharing">Spring 2024</a></li>
       <li><a href="https://ozer.gt/data">Latest version</a></li>
     </ul>
   </li>
