--- a/course-archive.html
+++ b/course-archive.html
@@ -28,6 +28,7 @@
     <ul>
       <li><a href="https://docs.google.com/document/d/1q-vzJWH3S8At2dd-UryzgIZ680D1H09xn0FLpwJYvX0/edit?usp=sharing">Fall 2018 (MBA)</a></li>
       <li><a href="https://docs.google.com/document/d/1AoqJ65JPDx2PGUsaBGBHvB26bKDQa8Gjqp5U2-QTHws/edit?usp=sharing">Spring 2023</a></li>
+      <li><a href="https://docs.google.com/document/d/1tmeFJdOAJ2kqQwlD7uT6XAqVsXSE6XmxddyGSZglxPQ/edit?usp=sharing">Spring 2024</a></li>
       <li><a href="https://ozer.gt/bigdata">Latest version (MSIS/MSBA)</a></li>
     </ul>  
   </li>
