--- a/course-archive.html
+++ b/course-archive.html
@@ -11,6 +11,7 @@
       <li><a href="https://docs.google.com/document/d/1iWRuARF_idimt022r2c-7ZahafRZAbuAYqjDnVZRyWs/edit?usp=sharing">Fall 2022</a></li>
       <li><a href="https://docs.google.com/document/d/12yp-sxo0o0lbN5YjnyHNb3FhuoNK1hDLZmindbYmGOw/edit?usp=sharing">Spring 2023</a></li>
       <li><a href="https://docs.google.com/document/d/1lQS0tgEa4l9ToCpwgUsOebZNGh6kS7SMggzhZAo_5CI/edit?usp=sharing">Spring 2024</a></li>
+      <li><a href="https://docs.google.com/document/d/1wopdgWnlWa4s1pAF-hn1yXp_bOV18tg_h1Bx85vx20k/edit?usp=sharing">Spring 2025</a></li>
       <li><a href="https://ozer.gt/predict">Latest version</a></li>
     </ul>
   </li>
