Add source link to quotes in quotes.html
Added a link to the source of the quotes.

--- a/quotes.html
+++ b/quotes.html
@@ -1,9 +1,1 @@
-“Wealth consists not in having great possessions, but in having few wants.” — Epictetus <br /><br />
-“A human being should be able to change a diaper, plan an invasion, butcher a hog, conn a ship, design a building, write a sonnet, balance accounts, build a wall, set a bone, comfort the dying, take orders, give orders, cooperate, act alone, solve equations, analyse a new problem, pitch manure, program a computer, cook a tasty meal, fight efficiently, die gallantly. Specialization is for insects” — Lazarus Long via Robert Heinlein <br /><br />
-“Deprived of meaningful work, men and women lose their reason for existence; they go stark, raving mad.” — Fyodor Dostoevsky <br /><br />
-“Finding the truth is difficult, and the road to it is rough.” — Ibn al-Haytham <br /><br />
-“The mystery of human existence lies not in just staying alive, but in finding something to live for.” — Fyodor Dostoevsky <br /><br />
-“Far better an approximate answer to the right question, which is often vague, than an exact answer to the wrong question, which can always be made precise.” — John Tukey <br /><br />
-“The market can remain irrational longer than you can remain solvent.” — Gary Shilling <br /><br />
-“A calm and modest life brings more happiness than the pursuit of success combined with constant restlessness." — Albert Einstein <br /><br />
-“If people do not believe that mathematics is simple, it is only because they do not realize how complicated life is." — John von Neumann <br /><br />
+See https://ozer.gt/log/quotes
